fix align image center

--- a/blocks/hero-carousel/hero-carousel.css
+++ b/blocks/hero-carousel/hero-carousel.css
@@ -7,6 +7,7 @@ main .section.hero-carousel-container{
     display: flex;
     justify-content: flex-end;
     flex-direction: column;
+    align-items: center;
 }
 
 
